Local updates: CSS, HTML, settings, favicon

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}Sami Ur Rehman{% endblock %}</title>
 
     <link rel="stylesheet" href="{% static 'main/css/base.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'main/images/favicon_mysite.png' %}">
     
     
 </head>
