--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,10 +5,12 @@
 {% block content %}
 <section class="hero">
     <div class="hero-text">
-        <h1>{{home_heading}}</h1>
+        <h1 style='padding-top:50px;'>
+                {{home_heading|safe}}
+        </h1>
         <h2>Hi! I am Sami Ur Rehman 👋</h2>
         <p>
-            {{home_short_skill}}
+            {{home_short_skill|safe}}
         </p>
     </div>
     <div class="hero-image" >
